[tool.poetry]
name = "api_fairness_perception"
version = "0.1.0"
description = ""
authors = ["André Sacilotti <andre.sacilotti@usp.br>"]

[tool.poetry.dependencies]
python = ">=3.8.1"
fastapi = "^0.79.0"
uvicorn = "^0.18.2"
scipy = "^1.9.0"
pandas = "^1.4.3"
SQLAlchemy = "^1.4.40"
psycopg2 = "^2.9.3"
Unidecode = "^1.3.4"
pika = "^1.3.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
